tests/ui/nightly/fail-wrong-yield-type.stderr
error[E0308]: mismatched types
 --> tests/ui/nightly/fail-wrong-yield-type.rs:5:11
  |
3 | #[fauxgen::generator(yield = i32)]
  |                      ----------- arguments to this method are incorrect
4 | fn gen() {
5 |     yield "test";
  |           ^^^^^^ expected `i32`, found `&str`
  |
help: the return type of this call is `&'static str` due to the type of the argument passed
   --> tests/ui/nightly/fail-wrong-yield-type.rs:3:1
    |
3   | #[fauxgen::generator(yield = i32)]
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
4   | fn gen() {
5   |     yield "test";
    |           ------ this argument influences the return type of `yield_`
note: method defined here
   --> src/detail/token.rs
    |
    |     pub async fn yield_(self: Pin<&Self>, value: Y) -> A {
    |                  ^^^^^^
    = note: this error originates in the macro `yield` (in Nightly builds, run with -Z macro-backtrace for more info)
